Fix superfluous whitespace in Blink and WebKit
First reported here:
https://github.com/mozilla/fx-private-relay/pull/2177#pullrequestreview-1047279534

--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -29,6 +29,13 @@ body,
 #overlayProvider {
   height: 100%;
   font-family: $font-stack-base;
+  // In <Layout> all content is wrapped in a `.non-header-wrapper` that has its
+  // own `overflow` applied, to allow the header and mobile menu to remain fixed
+  // in place. However, in Blink- and WebKit-based browsers, this resulted in
+  // empty space at the bottom of the page, below the footer.
+  // Since the user can scroll in `.non-header-wrapper`, everything outside that
+  // that still overflows these elements can safely be hidden:
+  overflow: hidden;
 }
 
 html {
